fix: typo in yml script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           username: ${{ secrets.AZURE_VM_USER }}
           key: ${{ secrets.AZURE_VM_SSH_KEY }}
           script: |
-            /home/azureuser/Hospital-user-portal
+            cd /home/azureuser/Hospital-user-portal
             
             git pull origin main
             
